--- a/style.css
+++ b/style.css
@@ -120,13 +120,18 @@ ul li a:hover {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+
+    animation: slide-back 0.2s;
 }
 
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.2s forwards;
 
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 #switch span{
@@ -171,4 +176,26 @@ footer {
     text-align: center;
     font-size: 14px;
 }
+
+/* animation */
+@keyframes slide-in {
+    from{
+        left: 0;
+    }
+
+    to{
+        left: 50%;
+    }   
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+
+    to {
+        left: 0;
+    }
+}
+    
 
